[COMMIT] The proj files have been updated to enable SourceLink [Documentation.csproj]

--- a/JeremyAnsel.Media.WavefrontObj/Documentation/Documentation.csproj
+++ b/JeremyAnsel.Media.WavefrontObj/Documentation/Documentation.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LogLevel>Warning</LogLevel>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="docfx.console" Version="2.45.1">
