--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,7 +38,7 @@ deploy:
 - provider: NuGet
   api_key:
     secure: ez3RLsSaraf05zX77AqWyz+gYbT+5eM7jdIq7Fv43DXPp5+YscPbW5yb7owDfyHd
-  skip_symbols: true
+  skip_symbols: false
   on:
     branch: master
     DEPLOY: True
