--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,7 @@ build:
   verbosity: minimal
 
 after_build:
+- if not defined APPVEYOR_PULL_REQUEST_NUMBER JeremyAnsel.Media.WavefrontObj\build-doc.cmd
 - if not defined APPVEYOR_PULL_REQUEST_NUMBER 7z a JeremyAnsel.Media.WavefrontObj.Documentation.zip .\JeremyAnsel.Media.WavefrontObj\Documentation\_site\* > nul
 - if not defined APPVEYOR_PULL_REQUEST_NUMBER appveyor PushArtifact JeremyAnsel.Media.WavefrontObj.Documentation.zip
 
